<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home</string>
    <string name="set_default_home_app">Set <xliff:g id="launcher_name" example="Launcher3">%1$s</xliff:g> as default home app in Settings</string>
    <string name="recent_task_option_split_screen">Split screen</string>
    <string name="recent_task_option_aspect_ratio">Change aspect ratio</string>
    <string name="split_app_info_accessibility">App info for %1$s</string>
    <string name="split_app_usage_settings">Usage settings for %1$s</string>
    <string name="new_window_option_taskbar">New Window</string>
    <string name="manage_windows_option_taskbar">Manage Windows</string>
    <string name="save_app_pair">Save app pair</string>
    <string name="app_pair_default_title"><xliff:g id="app1" example="Chrome">%1$s</xliff:g> | <xliff:g id="app2" example="YouTube">%2$s</xliff:g></string>
    <string name="app_pair_unlaunchable_at_screen_size">This app pair isn\'t supported on this device</string>
    <string name="app_pair_needs_unfold">Unfold device to use this app pair</string>
    <string name="app_pair_not_available">App pair isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to move a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to move a widget or use custom actions.</string>
    <string name="widget_picker_widget_options_button_description">More options</string>
    <string name="widget_picker_show_all_widgets_menu_item_title">Show all widgets</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="widget_preview_context_description"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="widget_preview_name_and_dims_content_description">
        <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget, %2$d wide by %3$d high
    </string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_home_screen_accessibility_text"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget added to home screen</string>
    <string name="suggested_widgets_header_title">Suggestions</string>
    <string name="productivity_widget_recommendation_category_label">Essentials</string>
    <string name="news_widget_recommendation_category_label">News &amp; magazines</string>
    <string name="entertainment_widget_recommendation_category_label">Entertainment</string>
    <string name="social_widget_recommendation_category_label">Social</string>
    <string name="others_widget_recommendation_category_label">Suggested for you</string>
    <string name="widget_picker_right_pane_accessibility_title"><xliff:g id="selected_header" example="Calendar">%1$s</xliff:g> widgets on right, search and options on left</string>
    <string name="widgets_count">
        {count, plural, =1{# widget} other{# widgets}}
    </string>
    <string name="shortcuts_count">
        {count, plural, =1{# shortcut} other{# shortcuts}}
    </string>
    <string name="widgets_and_shortcuts_count"><xliff:g id="widgets_count" example="5 widgets">%1$s</xliff:g>, <xliff:g id="shortcuts_count" example="1 shortcut">%2$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="widgets_full_sheet_search_bar_hint">Search</string>
    <string name="widgets_full_sheet_cancel_button_description">Clear text from search box</string>
    <string name="no_widgets_available">Widgets and shortcuts aren\'t available</string>
    <string name="no_search_results">No widgets or shortcuts found</string>
    <string name="widgets_full_sheet_personal_tab">Personal</string>
    <string name="widgets_full_sheet_work_tab">Work</string>
    <string name="widget_category_conversations">Conversations</string>
    <string name="widget_category_note_taking">Note-taking</string>
    <string name="widget_cell_tap_to_show_add_button_label">Show add button</string>
    <string name="widget_cell_tap_to_hide_add_button_label">Hide add button</string>
    <string name="widget_add_button_label">Add</string>
    <string name="widget_add_button_content_description">Add <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="widgets_list_expand_button_label">Show all</string>
    <string name="widgets_list_expand_button_content_description">Show all widgets</string>
    <string name="widgets_list_expanded">Showing all widgets</string>
    <string name="reconfigurable_widget_education_tip">Tap to change widget settings</string>
    <string name="widget_reconfigure_button_content_description">Change widget settings</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="label_application">App</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_list_label">Apps list</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to move a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to move a shortcut or use custom actions.</string>
    <string name="out_of_space">No room on this home screen</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_private_system_shortcut_label">Install in private</string>
    <string name="uninstall_private_system_shortcut_label">Uninstall app</string>
    <string name="install_drop_target_label">Install</string>
    <string name="dismiss_prediction_label">Don\'t suggest app</string>
    <string name="pin_prediction">Pin Prediction</string>
    <string name="bubble">Bubble</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in home.</string>
    <string name="permlab_write_settings">write home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in home.</string>
    <string name="gadget_error_text">Can\'t load widget</string>
    <string name="gadget_setup_text">Widget settings</string>
    <string name="gadget_complete_setup_text">Tap to finish setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Edit Name</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="dotted_app_label">
        {count, plural,
            =1      {{app_name} has # notification}
            other   {{app_name} has # notifications}
        }
    </string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="app_running_state_description">Active</string>
    <string name="app_minimized_state_description">Minimized</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format_exact">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g>, <xliff:g id="size" example="2">%2$d</xliff:g> items</string>
    <string name="folder_name_format_overflow">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g>, <xliff:g id="size" example="2">%2$d</xliff:g> or more items</string>
    <string name="unnamed_folder">Unnamed folder</string>
    <string name="app_pair_name_format">App pair: <xliff:g id="app1" example="Chrome">%1$s</xliff:g> and <xliff:g id="app2" example="YouTube">%2$s</xliff:g></string>
    <string name="styles_wallpaper_button_text">Wallpaper &amp; style</string>
    <string name="edit_home_screen">Edit Home Screen</string>
    <string name="settings_button_text">Home settings</string>
    <string name="open_source_licenses_title">Open source licenses</string>
    <string name="open_source_licenses_summary">Licenses for Launcher3 and bundled components</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="allow_rotation_title">Allow home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="landscape_mode_title">Landscape mode</string>
    <string name="landscape_mode_desc">Set phone into landscape mode</string>
    <string name="notification_dots_title">Notification dots</string>
    <string name="notification_dots_desc_on">On</string>
    <string name="notification_dots_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="msg_missing_notification_access">To show Notification Dots, turn on app notifications for <xliff:g id="name" example="My App">%1$s</xliff:g></string>
    <string name="title_change_settings">Change settings</string>
    <string name="notification_dots_service_title">Show notification dots</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="auto_add_shortcuts_label">Add app icons to home screen</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="home_appearance_title">Home appearance</string>
    <string name="themed_icons_title">Themed icons</string>
    <string name="themed_icons_summary">Use colors from your wallpaper for supported app icons</string>
    <string name="home_icon_size_title">Icon size</string>
    <string name="home_grid_portrait_title">Portrait layout</string>
    <string name="home_grid_landscape_title">Landscape layout</string>
    <string name="home_grid_columns_title">Columns</string>
    <string name="home_grid_rows_title">Rows</string>
</resources>