<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/home_appearance_title">
        <SwitchPreference
            android:key="themed_icons"
            android:title="@string/themed_icons_title"
            android:summary="@string/themed_icons_summary"
            android:defaultValue="false"
            android:persistent="true" />
        <androidx.preference.SeekBarPreference
            android:key="pref_home_icon_size_percent"
            android:title="@string/home_icon_size_title"
            android:defaultValue="100"
            android:max="130"
            launcher:min="70"
            launcher:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/home_grid_portrait_title">
        <androidx.preference.SeekBarPreference
            android:key="pref_home_grid_portrait_columns"
            android:title="@string/home_grid_columns_title"
            android:defaultValue="5"
            android:max="10"
            launcher:min="3"
            launcher:showSeekBarValue="true" />
        <androidx.preference.SeekBarPreference
            android:key="pref_home_grid_portrait_rows"
            android:title="@string/home_grid_rows_title"
            android:defaultValue="5"
            android:max="10"
            launcher:min="3"
            launcher:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/home_grid_landscape_title">
        <androidx.preference.SeekBarPreference
            android:key="pref_home_grid_landscape_columns"
            android:title="@string/home_grid_columns_title"
            android:defaultValue="5"
            android:max="10"
            launcher:min="3"
            launcher:showSeekBarValue="true" />
        <androidx.preference.SeekBarPreference
            android:key="pref_home_grid_landscape_rows"
            android:title="@string/home_grid_rows_title"
            android:defaultValue="5"
            android:max="10"
            launcher:min="3"
            launcher:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>

    <com.android.launcher3.settings.NotificationDotsPreference
        android:key="pref_icon_badging"
        android:title="@string/notification_dots_title"
        android:persistent="false"
        android:widgetLayout="@layout/notification_pref_warning" />

    <SwitchPreference
        android:key="pref_add_icon_to_home"
        android:title="@string/auto_add_shortcuts_label"
        android:summary="@string/auto_add_shortcuts_description"
        android:defaultValue="true"
        android:persistent="true"
        launcher:logIdOn="613"
        launcher:logIdOff="614" />

    <SwitchPreference
        android:key="pref_allowRotation"
        android:title="@string/allow_rotation_title"
        android:summary="@string/allow_rotation_desc"
        android:defaultValue="false"
        android:persistent="true"
        launcher:logIdOn="615"
        launcher:logIdOff="616" />

    <Preference
        android:key="open_source_license"
        android:title="@string/open_source_licenses_title"
        android:summary="@string/open_source_licenses_summary"
        android:persistent="false" />

</androidx.preference.PreferenceScreen>
